Adding docpad-plugin-ghpages

--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "docpad-plugin-stylus": "2.x",
     "docpad-plugin-text": "2.x",
     "request": "~2.21.0",
-    "docpad-plugin-feedr": "~2.4.2"
+    "docpad-plugin-feedr": "~2.4.2",
+    "docpad-plugin-ghpages": "~2.0.2"
   },
   "devDependencies": {
     "docpad-plugin-livereload": "2.x"
