--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "docpad-plugin-text": "2.x",
     "request": "~2.21.0",
     "docpad-plugin-feedr": "~2.4.2",
-    "docpad-plugin-ghpages": "~2.0.2"
+    "docpad-plugin-ghpages": "~2.0.2",
+    "docpad-plugin-services": "~2.2.4"
   },
   "devDependencies": {
     "docpad-plugin-livereload": "2.x"
